--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -150,7 +150,7 @@ $terminal-error: $secondary;
 .editor {
   display: flex;
   height: 75vh;
-  width: 50vw;
+  width: 50%;
   background-color: #1e1e1e; /* Dark editor background */
   color: #d4d4d4; /* Text color */
   font-family: 'Courier New', monospace;
@@ -162,7 +162,7 @@ $terminal-error: $secondary;
 
 .editor-tooltip {
   // to the right of the editor
-  width: 50vw;
+  width: 50%;
   height: 75vh;
   background-color: #2d2d2d;
   border-left: solid 2px black;
@@ -171,8 +171,27 @@ $terminal-error: $secondary;
 
 .editor-console {
   height: 25vh;
-  width: 100vw;
-  background-color: orange;
+  width: 100%;
+  background-color: #1e1e1e;
+}
+
+.run-bar {
+  width: 100%;
+  background-color: #474747;
+  h4 {
+    color: greenyellow;
+    background-color: #474747;
+    padding: 5px;
+    width: 40px;
+  }
+  h4:hover {
+    background-color: #646464;
+  }
+}
+
+#configConsoleOutput {
+  padding-left: 10px;
+  color: $light;
 }
 
 /* Line numbers styling */
@@ -246,6 +265,101 @@ $terminal-error: $secondary;
   display: none; /* Initially hidden */
   z-index: 100; /* Bring to the front */
   pointer-events: none; /* Prevent interaction */
+}
+
+#profile-pfp {
+  filter: drop-shadow(0 0 20px crimson);
+}
+
+#profile-name {
+  margin-top: 20px;
+}
+
+.profile-left-container {
+  border-radius: 10px 10px 10px 10px;
+}
+
+.profile-right-container {
+  background-color: $terminal-bg;
+  border-radius: 10px 10px 10px 10px;
+  height: 80vh;
+  max-width: 800px;
+}
+
+#profile-edit-readme {
+  cursor: pointer;
+}
+
+#profile-readme-text {
+  height: 100%; /* Ensure it fills the available height */
+  width: 100%;
+  background-color: black;
+  color: white;
+  font-size: 14px;
+  padding: 10px;
+  overflow-y: auto; /* Enable scrolling instead of increasing height */
+  word-wrap: break-word;
+  border-radius: 5px;
+  outline: none; /* Remove focus outline */
+}
+
+table {
+  width: 50%;
+  margin: auto;
+  border-collapse: collapse;
+  text-align: center;
+}
+th, td {
+  border: 2px solid black;
+  padding: 10px;
+}
+th {
+  background-color: darkslateblue;
+}
+
+#profile-blurb {
+  background-color: $terminal-bg;
+  border-radius: 8px;
+  padding: 4px;
+  box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
+  font-family: "SF Mono", "Monaco", "Consolas", monospace;
+  font-size: 14px;
+}
+
+/* Dynamic text colors */
+#profile-self, #profile-looking-for {
+  color: $primary;
+}
+
+
+/* When editable */
+#profile-readme-text[contenteditable="true"] {
+  cursor: text;
+}
+
+/* Scrollbar Styling */
+#profile-readme-text::-webkit-scrollbar {
+  width: 8px;
+}
+
+#profile-readme-text::-webkit-scrollbar-track {
+  background: #1e1e1e;
+}
+
+#profile-readme-text::-webkit-scrollbar-thumb {
+  background: #474747;
+  border-radius: 4px;
+}
+
+#profile-rank {
+  border: 2px solid red;
+  color: red;
+  font-family: "SF Mono", "Monaco", "Consolas", monospace;
+  border-radius: 25px;
+}
+
+.profile-lang-img {
+  max-width: 150px;
 }
 
 footer {
