--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -401,13 +401,12 @@ $terminal-error: $secondary;
   transition: transform 0.15s ease-out, box-shadow 0.15s ease-out, filter 0.15s ease-out;
   font-weight: 100;
   border-radius: 4px;
-  margin-bottom: -6px;
 }
 
 .badge {
   font-size: 18px;
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.4);
-  margin-top: 10px !important;
+  margin: 4px;
   background-color: $dark;
   transition: transform 0.15s ease-out, box-shadow 0.15s ease-out, filter 0.15s ease-out;
   font-weight: 100;
@@ -423,13 +422,20 @@ $terminal-error: $secondary;
 }
 
 @media (max-width: 1460px) {
-  .badge, #profile-age, #profile-aura { // prevent overflow
+  .badge { // prevent overflow
     display: block; /* Makes each badge take full width */
     width: 100%;
   }
 
   br {
     display: none;
+  }
+}
+
+@media (max-width: 1100px) {
+  #profile-age, #profile-aura { // prevent overflow
+    display: block; /* Makes each badge take full width */
+    width: 100%;
   }
 }
 
