--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -432,8 +432,8 @@ $terminal-error: $secondary;
   }
 }
 
-@media (max-width: 1100px) {
-  #profile-age, #profile-aura { // prevent overflow
+@media (max-width: 1100px) and (min-width: 575px) {
+  #profile-age, #profile-aura { // prevent overflow on screens between that pixel count
     display: block; /* Makes each badge take full width */
     width: 100%;
   }
