--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -410,7 +410,6 @@ $terminal-error: $secondary;
 .badge {
   font-size: 18px;
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.4);
-  margin: 4px;
   background-color: $dark;
   transition: transform 0.15s ease-out, box-shadow 0.15s ease-out, filter 0.15s ease-out;
   font-weight: 100;
@@ -481,7 +480,7 @@ $terminal-error: $secondary;
 }
 
 // TODO: add more ranks
-.rank-intern {
+.rank-jobless {
   color: red; // color changes based on rank
   border: red solid 1px;
 }
