--- a/sass/custom.css
+++ b/sass/custom.css
@@ -12224,6 +12224,7 @@ textarea.form-control-lg {
   background-color: #282C34;
   transition: transform 0.15s ease-out, box-shadow 0.15s ease-out, filter 0.15s ease-out;
   font-weight: 100;
+  max-width: 285px;
 }
 
 .badge img {
