update matchpool page

--- a/sass/custom.css
+++ b/sass/custom.css
@@ -12100,6 +12100,12 @@ textarea.form-control-lg {
   filter: brightness(0.8); /* Slightly increases brightness */
 }
 
+.profile-name {
+  font-size: 22px;
+  padding: 5px;
+  color: #fff;
+}
+
 #profile {
   display: flex;
   justify-content: center;
@@ -12271,7 +12277,7 @@ textarea.form-control-lg {
   cursor: pointer;
 }
 
-#profile-name, .profile-name {
+#profile-name {
   transition: transform 0.15s ease-out, box-shadow 0.15s ease-out, filter 0.15s ease-out;
   background-color: #282C34;
 }
