--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -282,7 +282,7 @@ $terminal-error: $secondary;
 }
 
 // Profile Page Styling
-#profile {
+#profile, .profile {
   display: flex;
   justify-content: center;
   align-items: center;
