--- a/sass/custom.css
+++ b/sass/custom.css
@@ -12094,6 +12094,9 @@ textarea.form-control-lg {
 
 #profile-pfp, .profile-pfp {
   transition: filter 0.15s ease-out;
+  object-fit: cover;
+  width: 300px;
+  height: 300px;
 }
 
 #profile-pfp:hover {
