--- a/sass/custom.css
+++ b/sass/custom.css
@@ -12095,8 +12095,8 @@ textarea.form-control-lg {
 #profile-pfp, .profile-pfp {
   transition: filter 0.15s ease-out;
   object-fit: cover;
-  width: 300px;
-  height: 300px;
+  width: 100%;
+  aspect-ratio: 1/1;
 }
 
 #profile-pfp:hover {
