--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -270,8 +270,8 @@ $terminal-error: $secondary;
 #profile-pfp, .profile-pfp {
   transition: filter 0.15s ease-out;
   object-fit: cover;
-  width: 300px;
-  height: 300px;
+  width: 100%;
+  aspect-ratio: 1 / 1;
 }
 
 #profile-pfp:hover {
