update ui for quicksand font

--- a/sass/custom.css
+++ b/sass/custom.css
@@ -12103,12 +12103,6 @@ textarea.form-control-lg {
   filter: brightness(0.8); /* Slightly increases brightness */
 }
 
-.profile-name {
-  font-size: 22px;
-  padding: 5px;
-  color: #fff;
-}
-
 #profile, .profile {
   display: flex;
   justify-content: center;
@@ -12165,6 +12159,7 @@ textarea.form-control-lg {
   word-wrap: break-word;
   border-radius: 5px;
   outline: none; /* Remove focus outline */
+  font-family: "Quicksand", sans-serif;
 }
 #profile .profile-right-container #profile-edit-readme, .profile .profile-right-container #profile-edit-readme {
   cursor: pointer;
@@ -12279,9 +12274,13 @@ textarea.form-control-lg {
   cursor: pointer;
 }
 
-#profile-name {
+#profile-name, .profile-name {
   transition: transform 0.15s ease-out, box-shadow 0.15s ease-out, filter 0.15s ease-out;
   background-color: #282C34;
+  font-size: 22px;
+  padding: 5px;
+  color: #fff;
+  font-family: "Quicksand", serif;
 }
 
 #profile-name:hover {
