--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -278,12 +278,6 @@ $terminal-error: $secondary;
   filter: brightness(0.8); /* Slightly increases brightness */
 }
 
-.profile-name {
-  font-size: 22px;
-  padding: 5px;
-  color: #fff;
-}
-
 // Profile Page Styling
 #profile, .profile {
   display: flex;
@@ -348,6 +342,7 @@ $terminal-error: $secondary;
       word-wrap: break-word;
       border-radius: 5px;
       outline: none; /* Remove focus outline */
+      font-family: "Quicksand", sans-serif;
     }
 
     #profile-edit-readme {
@@ -474,9 +469,13 @@ $terminal-error: $secondary;
   cursor: pointer;
 }
 
-#profile-name {
+#profile-name, .profile-name {
   transition: transform 0.15s ease-out, box-shadow 0.15s ease-out, filter 0.15s ease-out;
   background-color: $dark;
+  font-size: 22px;
+  padding: 5px;
+  color: #fff;
+  font-family: "Quicksand", serif;
 }
 
 #profile-name:hover {
