--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -498,6 +498,10 @@ $terminal-error: $secondary;
   width: 100%;
 }
 
+#matchpool h1 {
+  font-family: "Quicksand", serif;
+}
+
 footer {
   background-color: $dark;
   color: $light;
