--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -419,6 +419,18 @@ $terminal-error: $secondary;
   font-weight: 100;
 }
 
+.profile-badges-container {
+  display: flex;
+  justify-content: space-between; /* Ensures spacing between badges */
+  flex-wrap: wrap; /* Makes sure they stack on small screens */
+}
+
+.profile-badges-container .badge {
+  flex: 1; /* Makes both badges share equal width */
+  text-align: center; /* Keeps text centered */
+  min-width: 40%; /* Prevents excessive shrinking */
+}
+
 .badge img {
   width: 15px;
 }
@@ -432,6 +444,10 @@ $terminal-error: $secondary;
   .badge { // prevent overflow
     display: block; /* Makes each badge take full width */
     width: 100%;
+  }
+
+  .profile-badges-container {
+    flex-direction: column;
   }
 
   br {
