--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -509,6 +509,10 @@ $terminal-error: $secondary;
   width: 100%;
 }
 
+#notificationContainerLabel {
+  font-family: "Quicksand", sans-serif;
+}
+
 #matchpool h1 {
   font-family: "Quicksand", serif;
 }
