added incoming notif count

--- a/sass/custom.css
+++ b/sass/custom.css
@@ -12221,7 +12221,18 @@ textarea.form-control-lg {
   border-radius: 4px;
 }
 
-.badge {
+.notif-btn {
+  position: relative;
+}
+
+.notif-btn span {
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  display: block;
+}
+
+.badge:not(#notif-badge) {
   font-size: 18px;
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.4);
   background-color: #282C34;
@@ -12251,7 +12262,7 @@ textarea.form-control-lg {
 }
 
 @media (max-width: 1460px) {
-  .badge {
+  .badge:not(#notif-badge) {
     display: block; /* Makes each badge take full width */
     width: 100%;
   }
@@ -12279,7 +12290,7 @@ textarea.form-control-lg {
   }
 }
 /* Hover Effect */
-.badge:hover {
+.badge:hover:not(#notif-badge) {
   transform: translateY(-3px); /* Slightly raises the badge */
   filter: brightness(1.2); /* Slightly increases brightness */
   cursor: pointer;
