--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -529,7 +529,11 @@ $terminal-error: $secondary;
   font-family: "Quicksand", sans-serif;
 }
 
-#matchpool h1 {
+#chat-container {
+  border-color: white;
+}
+
+#matchpool, #chats {
   font-family: "Quicksand", serif;
 }
 
