--- a/sass/custom.css
+++ b/sass/custom.css
@@ -12341,6 +12341,19 @@ textarea.form-control-lg {
   font-family: "Quicksand", serif;
 }
 
+/* Initial stacked state */
+#matchpool-container .profile {
+  opacity: 0;
+  transform: translateY(20px); /* Start slightly below their final position */
+  transition: opacity 0.5s ease, transform 0.5s ease;
+}
+
+/* Animate into place */
+#matchpool-container .profile.animate {
+  opacity: 1;
+  transform: translateY(0);
+}
+
 footer {
   background-color: #282C34;
   color: #ABB2BF;
