--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -537,6 +537,19 @@ $terminal-error: $secondary;
   font-family: "Quicksand", serif;
 }
 
+/* Initial stacked state */
+#matchpool-container .profile {
+  opacity: 0;
+  transform: translateY(20px); /* Start slightly below their final position */
+  transition: opacity 0.5s ease, transform 0.5s ease;
+}
+
+/* Animate into place */
+#matchpool-container .profile.animate {
+  opacity: 1;
+  transform: translateY(0);
+}
+
 footer {
   background-color: $dark;
   color: $light;
