--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -550,6 +550,79 @@ $terminal-error: $secondary;
   transform: translateY(0);
 }
 
+.page {
+  min-height: 92vh;
+}
+
+.btn-gray {
+    --bs-btn-color: gray;
+    --bs-btn-border-color: gray;
+    --bs-btn-hover-color: #000;
+    --bs-btn-hover-bg: gray;
+    --bs-btn-hover-border-color: gray;
+    --bs-btn-focus-shadow-rgb: 86, 182, 194;
+    --bs-btn-active-color: #000;
+    --bs-btn-active-bg: gray;
+    --bs-btn-active-border-color: gray;
+    --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+    --bs-btn-disabled-color: gray;
+    --bs-btn-disabled-bg: transparent;
+    --bs-btn-disabled-border-color: gray;
+    --bs-gradient: none;
+}
+
+.btn-black {
+  --bs-btn-color: #000;
+  --bs-btn-bg: black;
+  --bs-btn-border-color: black;
+  --bs-btn-hover-color: #000;
+  //--bs-btn-hover-bg: rgb(215.9, 169.15, 124.95);
+  --bs-btn-hover-border-color: black;
+  --bs-btn-focus-shadow-rgb: 178, 131, 87;
+  --bs-btn-active-color: #000;
+  --bs-btn-active-bg: $primary;
+  --bs-btn-active-border-color: $primary;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #000;
+  --bs-btn-disabled-bg: black;
+  --bs-btn-disabled-border-color: black;
+}
+
+.btn-linkedin {
+  --bs-btn-color: #000;
+  --bs-btn-bg: #0072b1;
+  --bs-btn-border-color: #0072b1;
+  --bs-btn-hover-color: #000;
+  //--bs-btn-hover-bg: rgb(215.9, 169.15, 124.95);
+  --bs-btn-hover-border-color: #0072b1;
+  --bs-btn-focus-shadow-rgb: 178, 131, 87;
+  --bs-btn-active-color: #000;
+  --bs-btn-active-bg: $primary;
+  --bs-btn-active-border-color: $primary;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #000;
+  --bs-btn-disabled-bg: #0072b1;
+  --bs-btn-disabled-border-color: #0072b1;
+}
+
+.btn-reddit {
+  --bs-btn-color: #000;
+  --bs-btn-bg: #ED001C;
+  --bs-btn-border-color: #ED001C;
+  --bs-btn-hover-color: #000;
+  //--bs-btn-hover-bg: rgb(215.9, 169.15, 124.95);
+  --bs-btn-hover-border-color: #ED001C;
+  --bs-btn-focus-shadow-rgb: 178, 131, 87;
+  --bs-btn-active-color: #000;
+  --bs-btn-active-bg: #ED001C;
+  --bs-btn-active-border-color: #ED001C;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #000;
+  --bs-btn-disabled-bg: #ED001C;
+  --bs-btn-disabled-border-color: #ED001C;
+}
+
+
 footer {
   background-color: $dark;
   color: $light;
