--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -576,10 +576,10 @@ $terminal-error: $secondary;
   --bs-btn-bg: black;
   --bs-btn-border-color: black;
   --bs-btn-hover-color: #000;
-  //--bs-btn-hover-bg: rgb(215.9, 169.15, 124.95);
+  --bs-btn-hover-bg: rgb(55, 55, 55);
   --bs-btn-hover-border-color: black;
   --bs-btn-focus-shadow-rgb: 178, 131, 87;
-  --bs-btn-active-color: #000;
+  --bs-btn-active-color: #000000;
   --bs-btn-active-bg: $primary;
   --bs-btn-active-border-color: $primary;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
@@ -593,7 +593,7 @@ $terminal-error: $secondary;
   --bs-btn-bg: #0072b1;
   --bs-btn-border-color: #0072b1;
   --bs-btn-hover-color: #000;
-  //--bs-btn-hover-bg: rgb(215.9, 169.15, 124.95);
+  --bs-btn-hover-bg: rgb(55, 169, 232);
   --bs-btn-hover-border-color: #0072b1;
   --bs-btn-focus-shadow-rgb: 178, 131, 87;
   --bs-btn-active-color: #000;
@@ -610,7 +610,7 @@ $terminal-error: $secondary;
   --bs-btn-bg: #ED001C;
   --bs-btn-border-color: #ED001C;
   --bs-btn-hover-color: #000;
-  //--bs-btn-hover-bg: rgb(215.9, 169.15, 124.95);
+  --bs-btn-hover-bg: rgb(292, 55, 83);
   --bs-btn-hover-border-color: #ED001C;
   --bs-btn-focus-shadow-rgb: 178, 131, 87;
   --bs-btn-active-color: #000;
